--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,11 +1,51 @@
 <div class="main-header">
-
+  <div class="main-header_contents">
+    <div class="main-header_text">チャットタイトル</div>
+    <div class="logout">
+      <a href="#">logout</a>
+    </div>
+  </div>
 </div>
 
 <div class="main-chat">
-
+  <div class="upper-chat">
+    <div class="upper-information">
+      tetsu
+    </div>
+    <div class="upper-date">
+      2024/12/4 12:00
+    </div>
+  </div>
+  <div class="under-chat">
+    <div class="under-text">
+      あああああああああああああ
+    </div>
+  </div>
+  <div class="upper-chat">
+    <div class="upper-information">
+      kabu
+    </div>
+    <div class="upper-date">
+      2024/12/4 14:00
+    </div>
+  </div>
+  <div class="under-chat">
+    <div class="under-text">
+      ううううううううううううううううう
+    </div>
+  </div>
 </div>
 
 <div class="input">
-
+  <%# <div class="form-input">
+    <input class="form-massage" placeholder= "type a massage">
+  </div>
+  <input class="form-submit" type="submit" value="送信"> %>
+  <div class="form-field col x-100">
+    <input id="message" class="input-text js-input" type="text" required>
+    <label class="label" for="message">Message</label>
+  </div>
+  <div class="form-field col x-100 ">
+    <input class="submit-btn" type="submit" value="Submit">
+  </div>
 </div>
