--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -45,6 +45,15 @@
     <input id="message" class="input-text js-input" type="text" required>
     <label class="label" for="message">Message</label>
   </div>
+
+  <!-- 画像選択用のフィールド -->
+  <div class="form-field col x-100">
+    <label class="form-image">
+      <span class="image-file">画像を選択</span>
+      <input type="file" class="hidden" id="image-upload" name="image">
+    </label>
+  </div>
+
   <div class="form-field col x-100 ">
     <input class="submit-btn" type="submit" value="Submit">
   </div>
