--- a/app/views/chat_rooms/_main_chat.html.erb
+++ b/app/views/chat_rooms/_main_chat.html.erb
@@ -1,3 +1,4 @@
+<!-- app/views/chat_rooms/_main_chat.html.erb -->
 <div class="main-header">
   <div class="main-header_contents">
     <div class="main-header_text">チャットタイトル</div>
@@ -47,10 +48,6 @@
 </div>
 
 <div class="input">
-  <%# <div class="form-input">
-    <input class="form-massage" placeholder= "type a massage">
-  </div>
-  <input class="form-submit" type="submit" value="送信"> %>
   <div class="form-field col x-100">
     <input id="message" class="input-text js-input" type="text" required>
     <label class="label" for="message">Message</label>
