--- a/app/views/chat_rooms/new.html.erb
+++ b/app/views/chat_rooms/new.html.erb
@@ -18,7 +18,7 @@
   </div>
 
   <div class="form-field">
-    <%= form.submit '作成', class: 'submit-btn' %>
+    <%= form.submit '作成' %>
   </div>
 <% end %>
 
