--- a/app/views/chat_rooms/_side_bar.html.erb
+++ b/app/views/chat_rooms/_side_bar.html.erb
@@ -1,17 +1,18 @@
-<!-- app/views/chat_rooms/_side_bar.html.erb -->
 <div class="side-header">
   <div class="side-header_contents">
     <div class="user-name"><%= current_user.username %></div>
     <div class="new-chat">
-      <%= link_to 'チャットを作成する', new_chat_room_path %>
+      <%= link_to 'チャットを作成する', new_chat_room_path, data: { turbo: false } %>
     </div>
   </div>
 </div>
 
-<%= turbo_frame_tag "chat_rooms_sidebar" do %>
+<div id="chat_rooms_sidebar">
   <div class="rooms">
     <% current_user.chat_rooms.each do |chat_room| %>
-      <%= render partial: 'chat_rooms/room', locals: { chat_room: chat_room } %>
+      <div class="room" id="chat-room-<%= chat_room.id %>">
+        <%= link_to chat_room.name, chat_room_path(chat_room), data: { turbo_frame: "chat-room-content" }, class: 'chat-room-link' %>
+      </div>
     <% end %>
   </div>
-<% end %>
+</div>
