--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -9,11 +9,17 @@
       <div class="auth-links">
         <% if user_signed_in? %>
           <div class="logout">
-            <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+            <%= link_to 'ログアウト', destroy_user_session_path, 
+            data: { turbo_method: :delete }, 
+            class: "nav__btn" %>
           </div>
         <% else %>
           <div class="login">
-            <%= link_to 'ログイン', new_user_session_path %>
+            <%= link_to 'ログイン', new_user_session_path, class: "nav__btn" %>
+          </div>
+          <div class="register">
+            <%= link_to '新規登録', new_user_registration_path, data: { turbo: false }, class: "nav__btn" %>
+  <!-- 新規登録ボタン追加 -->
           </div>
         <% end %>
       </div>
@@ -45,3 +51,4 @@
   <!-- メッセージ入力フォーム -->
   <%= render "messages/main_chat_form", chat_room: @chat_room %>
 <% end %> <!-- turbo_frame_tag "chat-room-content" -->
+
