--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,44 +1,33 @@
+<!-- app/views/devise/registrations/new.html.erb -->
 <h2>新規登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <!-- エラーメッセージ表示 -->
-  <% if resource.errors.any? %>
-    <div class="error-messages">
-      <ul>
-        <% resource.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="form-field">
+  <div class="field">
     <%= f.label :username, "ユーザー名" %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: "username", class: 'input-text' %>
+    <%= f.text_field :username, autofocus: true %>
   </div>
 
-  <div class="form-field">
+  <div class="field">
     <%= f.label :email, "メールアドレス" %><br />
-    <%= f.email_field :email, autocomplete: "email", class: 'input-text' %>
+    <%= f.email_field :email %>
   </div>
 
-  <div class="form-field">
+  <div class="field">
     <%= f.label :password, "パスワード" %><br />
-    <%= f.password_field :password, autocomplete: "new-password", class: 'input-text' %>
+    <%= f.password_field :password %>
   </div>
 
-  <div class="form-field">
+  <div class="field">
     <%= f.label :password_confirmation, "パスワード確認" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'input-text' %>
+    <%= f.password_field :password_confirmation %>
   </div>
 
-  <div class="form-field">
-    <%= f.submit "登録", class: 'submit-btn' %>
+  <div class="actions">
+    <%= f.submit "登録" %>
   </div>
 <% end %>
 
-<!-- ログインやパスワードリセットのリンクを手動で追加 -->
-<div class="links">
-  <%= link_to 'ログインはこちら', new_user_session_path %> | 
-  <%= link_to 'パスワードを忘れた場合', new_user_password_path %>
-</div>
+<!-- サインインページに戻るリンクを追加 -->
+<p>
+  <%= link_to 'ログイン', new_user_session_path %> <!-- サインインページへのリンク -->
+</p>
