--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,54 @@
-<!-- app/views/devise/registrations/new.html.erb -->
-<h2>新規登録</h2>
+<div class="account-page" id="account-page">
+  <div class="account-page__inner clearfix">
+    <div class="account-page__inner--left account-page__header">
+      <h2>Create Account</h2>
+      <h5>新規アカウントの作成</h5>
+    </div>
+    <div class="account-page__inner--right user-form">
+      <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), local: true do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        
+        <div class="field">
+          <div class="field-label">
+            <%= f.label :username %>
+          </div>
+          <div class="field-input">
+            <%= f.text_field :username, autofocus: true, class: 'form-control' %>
+          </div>
+        </div>
+        
+        <div class="field">
+          <div class="field-label">
+            <%= f.label :email %>
+          </div>
+          <div class="field-input">
+            <%= f.email_field :email, class: 'form-control' %>
+          </div>
+        </div>
+        
+        <div class="field">
+          <div class="field-label">
+            <%= f.label :password %>
+            <i>(英数字6文字以上)</i>
+          </div>
+          <div class="field-input">
+            <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+          </div>
+        </div>
+        
+        <div class="field">
+          <div class="field-label">
+            <%= f.label :password_confirmation %>
+          </div>
+          <div class="field-input">
+            <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+          </div>
+        </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <div class="field">
-    <%= f.label :username, "ユーザー名" %><br />
-    <%= f.text_field :username, autofocus: true %>
+        <div class="actions">
+          <%= f.submit "Create Account", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :email, "メールアドレス" %><br />
-    <%= f.email_field :email %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password, "パスワード" %><br />
-    <%= f.password_field :password %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "パスワード確認" %><br />
-    <%= f.password_field :password_confirmation %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "登録" %>
-  </div>
-<% end %>
-
-<!-- サインインページに戻るリンクを追加 -->
-<p>
-  <%= link_to 'ログイン', new_user_session_path %> <!-- サインインページへのリンク -->
-</p>
+</div>
